fix spacing issues with sidebar

--- a/frontend/source/sass/data_explorer.scss
+++ b/frontend/source/sass/data_explorer.scss
@@ -96,27 +96,28 @@ span.dollars {
 }
 
 .filter-title {
-  padding-bottom: .3em;
+  padding-bottom: 0;
 }
 
 .filter-block {
   background: $color-gray-lightest;
   border-radius: 4px;
-  margin-bottom: 2em;
+  margin-bottom: 0;
   padding: 1rem 2rem;
 }
+
 
 @media (min-width: 550px) {
   .filter-container {
     float: right;
-    margin-bottom: 3em;
+    margin-bottom: 1em;
   }
 }
 
 /* multiselect filter */
-
-.dropdown {
+dl.dropdown {
   margin-bottom: 1.5rem;
+  margin-top: .2em;
   dd,
   dt {
     margin:0px;
